# MopRs

./: .dockerignore  .eslintrc.json  .gitignore  .prettierrc  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  MopRs.code-workspace  README.md  benchmark.yaml  dockerfile  package-lock.json  package.json  webpack.config.js
.github/workflows/: ci.yaml
.kube/: ingress.yaml  meilisearch_values.yaml  minio.yaml  mongo.yaml  moprs.yaml  redis_values.yaml
src/: app_settings.rs  main.rs
src/actors/: artist_scraper.rs  downloader.rs  mod.rs
src/db/: db_setup.rs  mod.rs  user_db.rs
src/db/music/: album.rs  artist.rs  chart.rs  mod.rs  music.rs  playlist.rs
src/db/user/: mod.rs  user.rs
src/deezer/: client.rs  downloader.rs  mod.rs  streaming.rs  structures.rs
src/handlers/music/: album.rs  artist.rs  cdn.rs  like.rs  mod.rs  music.rs  playlist.rs  related.rs  search.rs  trending.rs
src/handlers/music/tools/: index.rs  mod.rs  result.rs
src/handlers/user/: auth.rs  current_playlist.rs  mod.rs  playlists.rs  user.rs
src/handlers/user/tools/: mod.rs  result.rs
src/models/: mod.rs  music.rs  session.rs  user.rs
src/routes/: mod.rs  music.rs  user.rs
src/s3/: mod.rs  s3_setup.rs
src/search/: album.rs  artist.rs  mod.rs  music.rs  search_setup.rs
src/suggestion/: mod.rs  related.rs
src/suggestions/: mod.rs  related.rs  suggestions.rs
src/tools/: error.rs  mod.rs  stream.rs
static/: Main.css  Main.css.map  browserconfig.xml  index.html  site.webmanifest
static/Js/: ProtectedRoute.jsx  index.jsx  store.jsx
static/Js/Actions/: Action.jsx
static/Js/Components/Authentification/: AccountTopNav.jsx  Login.jsx  Register.jsx
static/Js/Components/Containers/: PlaylistContainer.jsx  SortableMusicContainer.jsx
static/Js/Components/Elements/: AlbumElement.jsx  ArtistElement.jsx  MusicElement.jsx  PlaylistElement.jsx  UserPlaylistElement.jsx
static/Js/Components/Helper/: AddToPlaylistModal.jsx  ButtonIcon.jsx  Icon.jsx  LikeButton.jsx  PlaylistCreateModal.jsx  PlaylistImporterModal.jsx  PlaylistModifyModal.jsx  PlaylistSaverButton.jsx
static/Js/Components/Items/: AlbumItemCard.jsx  ArtistItemCard.jsx  MusicItemRow.jsx
static/Js/Components/Items/Actions/: AddMusic.jsx  AddPlaylistMusic.jsx  AddToNewPlaylistMusic.jsx  AddToPlaylistMusic.jsx  DeletePlaylistMusic.jsx  DownloadMusic.jsx  GetLink.jsx  PlayMusic.jsx  PlayNextMusic.jsx  index.jsx
static/Js/Components/Items/Helper/: MoreButton.jsx  MoreButtonMusic.jsx
static/Js/Components/Layout/: MediaLayout.jsx
static/Js/Components/MainComponents/: Album.jsx  Artist.jsx  Favorites.jsx  History.jsx  MainPage.jsx  Music.jsx  PlayerFull.jsx  RelatedMusics.jsx  Selection.jsx  Suggestion.jsx  Trending.jsx  UserPlaylist.jsx  UserPlaylists.jsx  UserSettings.jsx
static/Js/Components/MainComponents/Groups/: AlbumGroup.jsx  ArtistGroup.jsx  MusicGroup.jsx  (+2 more)
static/Js/Components/MusicPlayer/: Player.jsx  PlayerSlider.jsx
static/Js/Components/Search/: SearchPage.jsx  SearchPageAlbums.jsx  SearchPageArtists.jsx  SearchPageMusics.jsx  SearchPagePlaylists.jsx  Searchbox.jsx  TopNav.jsx
static/Js/Constants/: MusicsConstants.jsx
static/Js/Reducers/: MusicPlayerReducer.jsx  RootReducer.jsx  UserAccountReducer.jsx
static/Js/Reducers/StoreSubscribers/: CurrentPlaylist.jsx  index.jsx
static/Style/: Main.css  Main.scss  _ButtonIcon.scss  _Card.scss  _Colors.scss  _Custom.scss  _MusicGroup.scss  _MusicItem.scss  _PlaylistSelector.scss  _Progress.scss  _Searchbox.scss
static/Style/Bootstrap/: _Button.scss  _Custom.scss  _Dropdown.scss  _Form.scss  _NavBar.scss
(+1 files in other folders)
