[package]
name = "mop-rs"
version = "0.1.0"
edition = "2018"

[profile.profiling]
inherits = "release"
debug = true

[package.metadata.cargo-machete]
ignored = ["rust-s3","serde_bytes"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
actix-web-prom = "0.8.0"
actix-session = { version = "0.7.1", features = ["redis-rs-session"] }
actix-identity = "0.5.2"
actix-files = "0.6.2"
actix-rt = "2.9.0"
mongodb = "2.8.0"
bson = { version = "2.8.1", features = ["chrono-0_4"] }
once_cell = "1.19.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"
serde = "1.0.193"
serde_with="3.4.0"
serde_json = "1.0.108"
serde_bytes="0.11.12"
reqwest = {version="0.11.23", features = ["json", "stream", "multipart", "cookies", "gzip"]}
bytes = "1.5.0"
thiserror = "1.0.51"
ring = "0.17.7"
itertools = "0.12.0"
config = "0.13.4"
hex = "0.4.3"
blowfish = "0.8.0"
block-modes = "0.8.1"
md5 = "0.7.0"
log = "0.4.20"
env_logger = "0.10.1"
chrono = "0.4.31"
now = "0.1.3"
envy = "0.4"
dotenv = "0.15.0"
rust-s3 = "0.33.0"
rand= "0.8.5"
meilisearch-sdk = "0.24.3"
id3 = "1.10.0"
pin-project = "1.1.3"
stream-flatten-iters = "0.2.0"
